Add screenshots for the new UI_NTG6_FY_V3 theme on KSW

--- a/src/content/updates/zxw/gt6/20240131GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240131GT_KSW.md
@@ -11,14 +11,14 @@ signatures:
 ---
 Summary:
 - References to upcoming `GT7-CAR` units
-- Two new themes `UI_NUM_KSW_SAILOR_T002` and `UI_NUM_KSW_SAILOR_T003`
+- Two new themes [`KSW_SAILOR_T002`](../../../themes/zxw/101-ksw_sailor_t002) and [`KSW_SAILOR_T003`](../../../themes/zxw/102-ksw_sailor_t003)
 
 Changes since `20240112GT_KSW`:
 - There are now runtime checks for "GT7" devices, which could mean that we will get more units going forward, although so far it seems that they will be using the same software. There is GT7 specific code to handle dynamic screen sizes and resolutions.
-- Two new Sailor style themes. It appears that all Sailor themes are being treated as one of the defaults, inheriting functionality from the existing ID7 theme. The new ones can be activated by adding two lines to `/OEM/zxw_factory_config.xml` file: `<Item id="101" ui="UI_NUM_KSW_SAILOR_T002" />` and `<Item id="102" ui="UI_NUM_KSW_SAILOR_T003" />`.
+- Two new Sailor style themes. It appears that all Sailor themes are being treated as one of the defaults, inheriting functionality from the existing ID7 theme. The new ones can be activated by adding two lines to `/OEM/zxw_factory_config.xml` file: `<Item id="101" ui="KSW_SAILOR_T002" />` and `<Item id="102" ui="KSW_SAILOR_T003" />`.
 - BTSuite: Added a ring.mp3 sound file used to test Bluetooth ringing functionality
 - BTSuite: Improvements to CarPlay call status handling
-- CustomerUI: Added "Weather" labels that seems specific to `UI_NUM_KSW_SAILOR_T002` theme
+- CustomerUI: Added "Weather" labels that seems specific to `KSW_SAILOR_T002` theme
 - Equalizer: Five new background images - one for Lexus and four for Sailor T003 theme
 - Equalizer: New app title text only visible on Benz themes, that will be shown on top of the screen
 - EventCenter: Adjusted reboot dialog's visibility and contents, will now show screen type as well
