--- a/src/content/updates/zxw/gt6/20240320GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240320GT_KSW.md
@@ -10,7 +10,7 @@ signatures:
   sha256: ca81aafa29d69e09a3b1051747f404fa65b7bab52ad858518e6b2733f88e9c20
 ---
 Summary:
-- New `KSW_BMW_ID8_COPILOT` theme based on existing ID8 where the Bluetooth sidebar menu item would be replaced with a new "Bluetooth Copilot". It can be activated with ID `41` via `OEM/zxw_factory_config.xml` file.
+- New [`KSW_BMW_ID8_COPILOT`](../../../themes/zxw/41-ksw_bmw_id8_copilot) theme based on existing ID8 where the Bluetooth sidebar menu item would be replaced with a new "Bluetooth Copilot". It can be activated with ID `41` via `OEM/zxw_factory_config.xml` file.
 - Fixes to Recent apps screen
 - Ability to choose default voice assistant app
 - Changed default Quick Settings tiles
@@ -18,7 +18,7 @@ Summary:
 Changes since `20240309GT_KSW`:
 - APKInstall: Fixes to logic around copying APK file to `Media` folder
 - BTSuite: Added layouts for BMW ID8 theme
-- CustomerUI: New theme with ID `41` called `KSW_BMW_ID8_COPILOT`
+- CustomerUI: New theme with ID `41` called [`KSW_BMW_ID8_COPILOT`](../../../themes/zxw/41-ksw_bmw_id8_copilot)
 - CustomerUI: Ability to switch background colour on Bentley theme
 - CustomerUI: Decoupled files for standard Benz and Benz NTG themes where the latter have further changes
 - CustomerUI: Fixes to number rounding for oil consumption level (in litres or gallons) on the Dashboard screen
