--- a/src/content/updates/zxw/gt6/20240406GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240406GT_KSW.md
@@ -10,13 +10,12 @@ signatures:
   sha256: 90f94ff5b3834cb7c5a1398170cec8f85ccddef0a24407b8f219fc81f8c63aa6
 ---
 Summary:
-- New `KSW_BMW_ID6` theme. It can be activated with ID `42` via `OEM/zxw_factory_config.xml` file
+- New [`KSW_BMW_ID6`](../../../themes/zxw/42-ksw_bmw_id6) theme. It can be activated with ID `42` via `OEM/zxw_factory_config.xml` file
 - New reversing activity with graphics for proximity sensors around the car, reversing lines, etc.
 
 Changes since `20240320GT_KSW`:
 - BTSuite: Microphone gain, seek bar (ID6)
-- New BMW ID6 theme with ID `42`, falling into a new category of `BWM_ID6` group (yes, there's a typo) with ID 9.
-    - Icons displayed should be in the following order: Music, Navi, Bluetooth | Video, Original Car, Browser | File Manager, DVR, Dashboard | Carplay, Apps, Settings
+- New BMW ID6 theme with ID `42`, icons displayed should be in the following order: Music, Navi, Bluetooth | Video, Original Car, Browser | File Manager, DVR, Dashboard | Carplay, Apps, Settings
 - CustomerUI: Top status bar can be automatically hidden and shown on app list screen (?)
 - Reversing activity with lots of graphics for parking lines, proximity indicators, etc.
 - New internal tests for `can_gather`, `mipi_reverse_knob`, `mipi_reverse_track` and `mute`
