--- a/src/content/updates/zxw/gt6/20240425GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240425GT_KSW.md
@@ -10,7 +10,7 @@ signatures:
   sha256: 16eec5549e07ec7d73dfd71491d094fa95419ef04e3625c0973862f43d532a6c
 ---
 Summary:
-- New theme: `<Item id="43" ui="UI_NUM_KSW_AUDI_PORSCHE" />`
+- New theme [`KSW_AUDI_PORSCHE`](../../../themes/zxw/43-ksw_audi_porsche): `<Item id="43" ui="KSW_AUDI_PORSCHE" />`
 - UI license activation checks through a file (or online service as a fallback)
 - MCU upgrade files are now verified for corruption before installation
 
