Fix links from updates to themes

--- a/src/content/updates/zxw/gt6/20240112GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240112GT_KSW.md
@@ -10,7 +10,7 @@ signatures:
   sha256: 2507e59757082dc730e3c19f34778486ae221e6e037751c1a0644097abff0253
 ---
 Summary:
-- Added new [Audi Bentley theme](../../../themes/zxw/40-ksw_audi_bentley) with ID `40`
+- Added new [Audi Bentley theme](/headunits/themes/zxw/40-ksw_audi_bentley) with ID `40`
 - At your own risk, see the `zxw_factory_config.xml` file and its `SupportUIListNotTestedYet` for all possible themes to test for us!
 - Various apps updated to support more themes
 - Found some new file paths
