--- a/src/content/updates/zxw/gt6/20240131GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240131GT_KSW.md
@@ -11,7 +11,7 @@ signatures:
 ---
 Summary:
 - References to upcoming `GT7-CAR` units
-- Two new themes [`KSW_SAILOR_T002`](../../../themes/zxw/101-ksw_sailor_t002) and [`KSW_SAILOR_T003`](../../../themes/zxw/102-ksw_sailor_t003)
+- Two new themes [`KSW_SAILOR_T002`](/headunits/themes/zxw/101-ksw_sailor_t002) and [`KSW_SAILOR_T003`](/headunits/themes/zxw/102-ksw_sailor_t003)
 
 Changes since `20240112GT_KSW`:
 - There are now runtime checks for "GT7" devices, which could mean that we will get more units going forward, although so far it seems that they will be using the same software. There is GT7 specific code to handle dynamic screen sizes and resolutions.
