--- a/src/content/updates/zxw/gt6/20240406GT_KSW.md
+++ b/src/content/updates/zxw/gt6/20240406GT_KSW.md
@@ -10,7 +10,7 @@ signatures:
   sha256: 90f94ff5b3834cb7c5a1398170cec8f85ccddef0a24407b8f219fc81f8c63aa6
 ---
 Summary:
-- New [`KSW_BMW_ID6`](../../../themes/zxw/42-ksw_bmw_id6) theme. It can be activated with ID `42` via `OEM/zxw_factory_config.xml` file
+- New [`KSW_BMW_ID6`](/headunits/themes/zxw/42-ksw_bmw_id6) theme. It can be activated with ID `42` via `OEM/zxw_factory_config.xml` file
 - New reversing activity with graphics for proximity sensors around the car, reversing lines, etc.
 
 Changes since `20240320GT_KSW`:
