--- a/src/content/updates/zxw/gt7/20240525GT_KSW.md
+++ b/src/content/updates/zxw/gt7/20240525GT_KSW.md
@@ -13,7 +13,7 @@ This is the first GT7 firmware OTA that we were able to get a hold of. It's been
 
 It seems like GT7 will be following similar pattern to KSW and its M600/M700 platforms, whereby GT6 and GT7 will be getting separate OTA ZIP files. More specifically, GT7 firmware will only detect updates with the following file names:
 - `update13_2.zip` - standard, where update prompt will show up for you to tap Yes/No
-- `update13_2_EAU.zip` (for EAU) and `update13_2_NA.zip` (for NA) - not sure about the differences
+- `update13_2_EAU.zip` (for EAU) and `update13_2_NA.zip` (for NA) - region specific
 - `update13_2_force.zip` - presumably this will start the installation without asking for confirmation
 
 Summary:
