Fix broken links

--- a/src/content/updates/zxw/gt7/20240525GT_KSW.md
+++ b/src/content/updates/zxw/gt7/20240525GT_KSW.md
@@ -9,7 +9,7 @@ signatures:
   sha1: 7e0cc56c2f46af3648f172d0908bebb0ced7c751
   sha256: dcbbe8d68c9c56c32fdb51e6ff22f075a537f52794a906d05d452c3cd6c6fe7c
 ---
-This is the first GT7 firmware OTA that we were able to get a hold of. It's been built one month after the last GT6 [20240425gt_ksw](/headunits/updates/zxw/gt6/20240425GT_KSW) build we've had at this time, so differences mentioned below will be coming from both one month's worth of work and also general changes to support new platform/build target.
+This is the first GT7 firmware OTA that we were able to get a hold of. It's been built one month after the [last GT6](/headunits/updates/zxw/gt6/20240425gt_ksw) build we've had at this time, so differences mentioned below will be coming from both one month's worth of work and also general changes to support new platform/build target.
 
 It seems like GT7 will be following similar pattern to KSW and its M600/M700 platforms, whereby GT6 and GT7 will be getting separate OTA ZIP files. More specifically, GT7 firmware will only detect updates with the following file names:
 - `update13_2.zip` - standard, where update prompt will show up for you to tap Yes/No
