--- a/src/content/updates/zxw/gt7/20240525GT_KSW.md
+++ b/src/content/updates/zxw/gt7/20240525GT_KSW.md
@@ -49,3 +49,4 @@ Other notes:
 - The System Updater app has the `cleartextTrafficPermitted=true` ;)
 - Target config on GT6 was `trinket` (SoC ID 394) with 4 "big" cores
 - Target config on GT7 is now `bengal` (SoC IDs 417, 420, 444 or 445) with 4 "big" and 4 "little" cores
+- Launcher3QuickStep_ksw.apk (`com.android.launcher3`) renamed to ZXW_Launcher3.apk and contains Zlink on the hard-coded list of apps that are not allowed to use split screen
