--- a/src/content/platforms/ksw/m501.md
+++ b/src/content/platforms/ksw/m501.md
@@ -5,13 +5,23 @@ name: "M501 (SD625/MSM8953)"
 Qualcomm Snapdragon 625 (SD625), 8-core 2GHz, Cortex-A53
 Qualcomm Snapdragon 450 (SDM450), 8-core 1.8GHz, Cortex-A53
 
-```properties
-ro.product.board=msm8953
-ro.board.platform=msm8953
-ro.product.vendor.brand=qti
-ro.product.vendor.device=msm8953_64
-ro.product.vendor.manufacturer=QUALCOMM
-ro.product.vendor.model=msm8953 for arm64
-ro.product.vendor.name=msm8953_64
-ro.vendor.build.fingerprint=qti/msm8953_64/msm8953_64:10/QKQ1.191008.001/lijun12251707:userdebug/test-keys
+```
+build.prop
+  ro.build.display.id=Ksw-Q-Userdebug_OS_v4.2.9
+  ro.product.system.brand=qti
+  ro.product.system.device=msm8953_64
+  ro.product.system.manufacturer=QUALCOMM
+  ro.product.system.model=msm8953 for arm64
+  ro.product.system.name=msm8953_64
+  ro.system.build.fingerprint=qti/msm8953_64/msm8953_64:10/QKQ1.191008.001/lijun12251707:userdebug/test-keys
+
+vendor/build.prop
+  ro.board.platform=msm8953
+  ro.product.board=msm8953
+  ro.product.vendor.brand=qti
+  ro.product.vendor.device=msm8953_64
+  ro.product.vendor.manufacturer=QUALCOMM
+  ro.product.vendor.model=msm8953 for arm64
+  ro.product.vendor.name=msm8953_64
+  ro.vendor.build.fingerprint=qti/msm8953_64/msm8953_64:10/QKQ1.191008.001/lijun12251707:userdebug/test-keys
 ```
