--- a/src/content/platforms/ksw/m600.md
+++ b/src/content/platforms/ksw/m600.md
@@ -4,13 +4,23 @@ name: "M600 (SD662/SM6115)"
 ---
 Qualcomm Snapdragon 662 (SM6115), 8-core 2.0GHz, Cortex-A73
 
-```properties
-ro.product.board=bengal
-ro.board.platform=bengal
-ro.product.vendor.brand=qti
-ro.product.vendor.device=bengal
-ro.product.vendor.manufacturer=QUALCOMM
-ro.product.vendor.model=Bengal for arm64
-ro.product.vendor.name=bengal
-ro.vendor.build.fingerprint=qti/bengal/bengal:11/RKQ1.230210.001/robot03180954:userdebug/test-keys
+```
+build.prop
+  ro.product.system.brand=qti
+  ro.product.system.device=qssi
+  ro.product.system.manufacturer=QUALCOMM
+  ro.product.system.model=qssi system image for arm64
+  ro.product.system.name=qssi
+  ro.system.build.fingerprint=qti/qssi/qssi:13/TKQ1.230213.001/robot04261159:userdebug/test-keys
+
+vendor/build.prop
+  ro.board.platform=bengal
+  ro.build.display.id=Ksw-T-M600_OS_v1.6.1
+  ro.product.board=bengal
+  ro.product.vendor.brand=qti
+  ro.product.vendor.device=bengal
+  ro.product.vendor.manufacturer=QUALCOMM
+  ro.product.vendor.model=Bengal for arm64
+  ro.product.vendor.name=bengal
+  ro.vendor.build.fingerprint=qti/bengal/bengal:11/RKQ1.230210.001/robot04261205:userdebug/test-keys
 ```
