--- a/src/content/platforms/ksw/m700.md
+++ b/src/content/platforms/ksw/m700.md
@@ -4,13 +4,23 @@ name: "M700 (SD680/SM6225)"
 ---
 Qualcomm Snapdragon 680 (SM6225), 8-core 2.8GHz, Cortex-A73
 
-```properties
-ro.product.board=bengal
-ro.board.platform=bengal
-ro.product.vendor.brand=qti
-ro.product.vendor.device=bengal
-ro.product.vendor.manufacturer=QUALCOMM
-ro.product.vendor.model=Bengal for arm64
-ro.product.vendor.name=bengal
-ro.vendor.build.fingerprint=qti/bengal/bengal:11/RKQ1.230210.001/lijun12151239:userdebug/test-keys
+```
+build.prop
+  ro.product.system.brand=qti
+  ro.product.system.device=qssi
+  ro.product.system.manufacturer=QUALCOMM
+  ro.product.system.model=qssi system image for arm64
+  ro.product.system.name=qssi
+  ro.system.build.fingerprint=qti/qssi/qssi:13/TKQ1.230213.001/robot05161117:userdebug/test-keys
+
+vendor/build.prop
+  ro.board.platform=bengal
+  ro.build.display.id=Ksw-T-M700_OS_v1.3.1
+  ro.product.board=bengal
+  ro.product.vendor.brand=qti
+  ro.product.vendor.device=bengal
+  ro.product.vendor.manufacturer=QUALCOMM
+  ro.product.vendor.model=Bengal for arm64
+  ro.product.vendor.name=bengal
+  ro.vendor.build.fingerprint=qti/bengal/bengal:11/RKQ1.230210.001/robot05161127:userdebug/test-keys
 ```
