--- a/src/content/platforms/ksw/m600.md
+++ b/src/content/platforms/ksw/m600.md
@@ -1,8 +1,9 @@
 ---
 id: "m600"
-name: "M600 (SD662/SM6115)"
+name: "M600 (SD662/SM6115) and M606 (SD460/SM4250)"
 ---
-Qualcomm Snapdragon 662 (SM6115), 8-core 2.0GHz, Cortex-A73
+M600: Qualcomm Snapdragon 662 (SM6115), 8-core 2.0GHz, Cortex-A73
+M606: Qualcomm Snapdragon 460 (SM4250), 8-core 1.8GHz, Cortex-A73
 
 ```
 build.prop
