--- a/src/content/platforms/ksw/m700.md
+++ b/src/content/platforms/ksw/m700.md
@@ -1,8 +1,9 @@
 ---
 id: "m700"
-name: "M700 (SD680/SM6225)"
+name: "M700 (SD680/SM6225) and M785 (SD685/SM6225-AD)"
 ---
-Qualcomm Snapdragon 680 (SM6225), 8-core 2.8GHz, Cortex-A73
+M700: Qualcomm Snapdragon 680 (SM6225), 8-core 2.4GHz, Cortex-A73
+M785: Qualcomm Snapdragon 685 (SM6225-AD), 8-core 2.8GHz, Cortex-A73
 
 ```
 build.prop
@@ -23,4 +24,35 @@ vendor/build.prop
   ro.product.vendor.model=Bengal for arm64
   ro.product.vendor.name=bengal
   ro.vendor.build.fingerprint=qti/bengal/bengal:11/RKQ1.230210.001/robot05161127:userdebug/test-keys
+```
+
+```sh
+soc_id=`cat /sys/devices/soc0/soc_id` 2> /dev/null
+
+# Store soc_id in ro.vendor.qti.soc_id
+setprop ro.vendor.qti.soc_id $soc_id
+
+if [ "$soc_id" -eq 444 ]; then
+setprop ro.vendor.qti.soc_model SM6115
+elif [ "$soc_id" -eq 417 ]; then
+setprop ro.vendor.qti.soc_model SM4250
+elif [ "$soc_id" -eq 441 ]; then
+setprop ro.vendor.qti.soc_model SM4125
+elif [ "$soc_id" -eq 518 ] || [ "$soc_id" -eq 561 ]; then
+setprop ro.vendor.qti.soc_model SM6225
+elif [ "$soc_id" -eq 469 ]; then
+setprop ro.vendor.qti.soc_model QCM4290
+elif [ "$soc_id" -eq 470 ]; then
+setprop ro.vendor.qti.soc_model QCS4290
+elif [ "$soc_id" -eq 473 ]; then
+setprop ro.vendor.qti.soc_model QCM2290
+elif [ "$soc_id" -eq 474 ]; then
+setprop ro.vendor.qti.soc_model QCS2290
+elif [ "$soc_id" -eq 497 ]; then
+setprop ro.vendor.qti.soc_model QCM6490
+elif [ "$soc_id" -eq 498 ]; then
+setprop ro.vendor.qti.soc_model QCS6490
+elif [ "$soc_id" -eq 585 ]; then
+setprop ro.vendor.qti.soc_model SG4150P
+fi
 ```
