--- a/src/data/updates/zxw/gt6/20240919GT_KSW.md
+++ b/src/data/updates/zxw/gt6/20240919GT_KSW.md
@@ -12,10 +12,10 @@ signatures:
 Summary:
 - New theme [`KSW_BMW_ID8_KJD`](/headunits/themes/zxw/47-ksw_bmw_id8_kjd) with ID `47`
 - New theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with ID `48` (under development)
-- New BT Transmission (`com.szchoiceway.transmitbt`) app hidden behind new "USB BT transmit" factory setting (`<btTransmitVisible>`)
-- New factory setting "Automatically enter navigation upon startup" (`<bootStartNavi>`)
+- New BT Transmission app hidden behind new "USB BT transmit" factory setting `<btTransmitVisible>`
+- New factory setting "Automatically enter navigation upon startup" `<bootStartNavi>`
 
-Change since `20240829GT_KSW` built 3 weeks earlier:
+Changes since `20240829GT_KSW` built 3 weeks earlier:
 - Theme [`KSW_BMW_ID8_KJD`](/headunits/themes/zxw/47-ksw_bmw_id8_kjd) with `id="47"` introduced across most of the built-in apps with graphics and lots of duplicated code, mostly to handle its own images over the standard [`KSW_BMW_ID8`](/headunits/themes/zxw/17-ksw_bmw_id8).
 - Theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with `id="48"` seems to be still under development as this firmware update does not seem to have any graphics and custom logic for it yet.
 - Ivicar app: The "Non-reverse Picture-in-Picture trigger" setting has been changed to be enabled by default
