Add GT6 20240919GT_KSW

--- a/src/data/updates/zxw/gt6/20240919GT_KSW.md
+++ b/src/data/updates/zxw/gt6/20240919GT_KSW.md
@@ -12,7 +12,7 @@ signatures:
 Summary:
 - New theme [`KSW_BMW_ID8_KJD`](/headunits/themes/zxw/47-ksw_bmw_id8_kjd) with ID `47`
 - New theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with ID `48` (under development)
-- New BT Transmission app hidden behind new "USB BT transmit" factory setting `<btTransmitVisible>`
+- New BT Transmission app hidden behind a new factory setting "USB BT transmit" `<btTransmitVisible>`
 - New factory setting "Automatically enter navigation upon startup" `<bootStartNavi>`
 
 Changes since `20240829GT_KSW` built 3 weeks earlier:
