Add GT6 20240919GT_KSW

--- a/src/data/updates/zxw/gt6/20240919GT_KSW.md
+++ b/src/data/updates/zxw/gt6/20240919GT_KSW.md
@@ -16,12 +16,12 @@ Summary:
 - New factory setting "Automatically enter navigation upon startup" `<bootStartNavi>`
 
 Changes since `20240829GT_KSW` built 3 weeks earlier:
-- Theme [`KSW_BMW_ID8_KJD`](/headunits/themes/zxw/47-ksw_bmw_id8_kjd) with `id="47"` introduced across most of the built-in apps with graphics and lots of duplicated code, mostly to handle its own images over the standard [`KSW_BMW_ID8`](/headunits/themes/zxw/17-ksw_bmw_id8).
-- Theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with `id="48"` seems to be still under development as this firmware update does not seem to have any graphics and custom logic for it yet.
+- Theme [`KSW_BMW_ID8_KJD`](/headunits/themes/zxw/47-ksw_bmw_id8_kjd) with `id="47"` introduced across most of the built-in apps with graphics and lots of duplicated code, mostly to handle its own images over the standard [`KSW_BMW_ID8`](/headunits/themes/zxw/17-ksw_bmw_id8)
+- Theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with `id="48"` seems to be still under development as this firmware update does not have any graphics and custom logic for it yet
 - Ivicar app: The "Non-reverse Picture-in-Picture trigger" setting has been changed to be enabled by default
 - CustomerUI app: New `CONTROL_DISPLAY_BRIGHTNESS` permission and ability to change screen brightness
 - CustomerUI app: Drag & drop apps to create shortcuts (?)
 - TestTools app: New diagnostics around LED light and MCU checks
-- New app called "BT Transmission" with package name `com.szchoiceway.transmitbt`, seems to have `LOCAL_MAC_ADDRESS` permission and a background service. By looking at graphics and labels, functionality appears to be around scanning for and connecting to a USB Bluetooth device, including pairing, using a PIN code, changing volume, etc. There seems to be functionality around upgrading firmware of the Bluetooth module with OTA files, also mentioning "performing the upgrade oparation on your mobile phone".
+- New app called "BT Transmission" with package name `com.szchoiceway.transmitbt`, seems to have `LOCAL_MAC_ADDRESS` permission and a background service. By looking at graphics and labels, functionality appears to be around scanning for and connecting to a USB Bluetooth device, including pairing, using a PIN code, changing volume, etc. There seems to be functionality around upgrading firmware of the Bluetooth module with OTA files, also mentioning "performing the upgrade operation on your mobile phone"
 - UpdateMCU app updated with retry mechanism (up to 3 times) and detection of upgrade interruption
-- Beware, lost of apps have some new metadata and seem to say they were built for GT7 flavour, even though this firmware is for GT6. Not sure if this could/would cause some trouble.
+- Beware, lost of apps have some new metadata and seem to say they were built for GT7 flavour, even though this firmware is for GT6. Not sure if this could cause some trouble.
