--- a/src/data/updates/zxw/gt6/20241129GT_KSW.md
+++ b/src/data/updates/zxw/gt6/20241129GT_KSW.md
@@ -11,13 +11,14 @@ signatures:
 ---
 Summary:
 - New themes [`KSW_BENZ_NTG7`](/headunits/themes/zxw/51-ksw_benz_ntg7) and [`KSW_BENZ_VITO`](/headunits/themes/zxw/52-ksw_benz_vito)
-- Initial support for Czech language (ID `21` in [zxw_factory_config.xml](/headunits/factory-settings/zxw))
+- Czech language
 
 Changes since `20241030GT_KSW` built 1 month earlier:
 - New theme [`KSW_BENZ_NTG7`](/headunits/themes/zxw/51-ksw_benz_ntg7) with `id="51"`
 - New theme [`KSW_BENZ_VITO`](/headunits/themes/zxw/52-ksw_benz_vito) with `id="52"` with navigation bar, air conditioning data (°C/°F) and ambient light settings via an additional app
 - New Ambient app (`com.szchoiceway.ambient`) for [`KSW_BENZ_VITO`](/headunits/themes/zxw/52-ksw_benz_vito) with "Breath", "Fade-in", "Flicker", "Musical rhythm" or "Steady on" modes, rhythmic sensitivity, colour and lightness settings
 - Few new Czech translations
+- Initial support for Czech language with ID `21` in [zxw_factory_config.xml](/headunits/factory-settings/zxw)
 - Contents of the `CarKTV.apk` and `Dsp.apk` were swapped (!?)
 - Support for 1920x1080 and 2400x900 resolutions
 - New `versionHideKSW` factory setting to remove `_KSW` suffix from version information
