Add GT7 20241019GT_KSW

--- a/src/data/updates/zxw/gt6/20241030GT_KSW.md
+++ b/src/data/updates/zxw/gt6/20241030GT_KSW.md
@@ -19,6 +19,6 @@ Changes since `20241018GT_KSW` built 12 days earlier:
 - Theme [`KSW_BENZ_LS`](/headunits/themes/zxw/48-ksw_benz_ls) with `id="48"` has even wider support across various apps
 - Mentions of air conditioning feature with left/right fans toggles and speeds, wind direction, temperature, etc.
 - Mentions of "auto park status" feature
-- Some internal changes to enable Android voice integration service, e.g. Google Assistant
+- Some internal changes to enable Android voice interaction service, e.g. Google Assistant
 - Downgraded built-in Chrome APK from v111.0.5563.116 to v100.0.4896.88 (?)
 - The `zxw_factory_config.xml` and `zxw_lcd.xml` are now embedded in firmware. They are very unlikely to be actually used, since that would mean everyone would have to have their own personalised firmware upgrade ZIP files. It's possible that they were just put there by a mistake. Embedded version was for BMW with `KSW-BM-20220815.0.cn` containing more [factory settings](/headunits/factory-settings/zxw) that we were aware of.
