--- a/src/data/updates/zxw/gt7/20241214GT_KSW.md
+++ b/src/data/updates/zxw/gt7/20241214GT_KSW.md
@@ -12,11 +12,10 @@ signatures:
 Summary:
 - New themes [`KSW_BENZ_NTG7`](/headunits/themes/zxw/51-ksw_benz_ntg7) and [`KSW_BENZ_VITO`](/headunits/themes/zxw/52-ksw_benz_vito)
 - Czech language
-- Upcoming theme [`KSW_BMW_ID8_GS_DOUBLE`](/headunits/themes/zxw/53-ksw_bmw_id8_gs_double)
 
 Changes since `20241019GT_KSW` built 56 days earlier:
 - See [GT6 20241030GT_KSW](/headunits/updates/zxw/gt6/20241030gt_ksw) and [GT6 20241129GT_KSW](/headunits/updates/zxw/gt6/20241129gt_ksw) for more details
-- First mentions of [`KSW_BMW_ID8_GS_DOUBLE`](/headunits/themes/zxw/53-ksw_bmw_id8_gs_double)
+- First mentions of [`KSW_BMW_ID8_GS_DOUBLE`](/headunits/themes/zxw/53-ksw_bmw_id8_gs_double) theme with ID `53`, not ready to activate yet
 - Various layout, UI scaling and view focus fixes
 - New "Google Voice" checkbox in "Function" section of factory settings UI
 - The "Touch data continuously sent" option has been renamed to "The original car host supports touch"
