--- a/src/data/updates/zxw/gt7/20250325GT_KSW.md
+++ b/src/data/updates/zxw/gt7/20250325GT_KSW.md
@@ -22,12 +22,8 @@ Changes since `20250104GT_KSW` built 80 days earlier:
 - New "Car without gear information" (`<withoutGearInfo>`) factory setting in Vehicle section
 - New "Mercedes Benz Vito bottom status bar style" (`<benzVitoBottomStyle>`) factory setting in Special Benz section with "Default" and "Temperature Control" options
 - Updated various translations
-- More work for the upcoming "FIBO" platform. Existing GT7/GT7Pro variations were on `CPM-KSW-001` whereas the board value for GT7_FIBO/GT7Pro_FIBO is `FIB-KSW-001`.
-- Zlink on FIBO platform will be potentially replaced with `com.szchoiceway.zxwlink` (CarPlay), `com.sykj.fusionlink` (Android Auto) and `com.sykj.hicar` (Huawei HiCar) packages instead.
+- More work for the upcoming "FIBO" platform. Existing GT7/GT7Pro variations are internally marked as `CPM`, whereas new GT7_FIBO/GT7Pro_FIBO are `FIB`. Zlink on FIBO platform will be replaced with `com.szchoiceway.zxwlink` (CarPlay), `com.sykj.fusionlink` (Android Auto) and `com.sykj.hicar` (Huawei HiCar) packages.
 - Added new file extensions that media apps will be scanning for: `.dsf`, `.dst` and `.dff` for audio and `.rm` for video files
-- Allow list of apps that are permitted to stream music is now extracted to a standalone file under `/system/etc/force_music_stream.txt`, although still contains the same package names as before: `com.papago.s10BU`, `com.nng.igo.primong.hun10th`, `com.nng.igo.primong.igoworld`, `com.nng.igo.primong.palestine` and `com.basarsoft.igonextgen.javaclient`
-- Similarly, block list of apps where notifications are not permitted is now extracted to `/system/etc/blacklist_notification.txt` although such file does not exist yet
-- ApkInstall app updated to disable all caps text on buttons
 - Swapped build server to Jenkins CI 
 
 
